I fixed the css alignment 4 img

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,3 +3,11 @@ h1 {
     color: cornflowerblue;
   }
   
+  img{
+    max-width: 25%;
+  }
+
+
+  *{
+    display: flexbox;
+  }
